--- a/templates/base.html
+++ b/templates/base.html
@@ -48,9 +48,9 @@
             </div>
         </div>
     </nav>
-    <main class="main ">   
+    <main class="main">   
         
-        <div class="container post-container">
+        <div class="container-fluid">
             {% block content %}
             {% endblock %}
         </div>
