--- a/templates/post.html
+++ b/templates/post.html
@@ -2,7 +2,7 @@
 {% block title %}Create a new post{% endblock %}
 {% block content %}
 
-<form class="form " method="POST" action="{{url_for('post_review')}}" enctype="multipart/form-data">
+<form class="form form-posting" method="POST" action="{{url_for('post_review')}}" enctype="multipart/form-data">
     <fieldset class="fieldset">
         <div class="game-title-section row form-group">                         
             <div class="form-group col-12">
