--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -37,7 +37,7 @@
             <div class="pegi-field row">
                 <legend for="plattform">Platfforms:</legend>
                 <div class="col-12">
-                <p>Platforms selected: {{post.game_platform }}</p>
+                <p>Platforms selected:</p>
                 {% for platform in platforms %}
                     {% if platform in post.game_platform %}
                         <input type="checkbox" name="platform" value="{{platform}}" checked>
@@ -52,21 +52,6 @@
                     <span>{{ plarform }}</span>
                 {% endfor %} -->
                 </div>
-                <div class="plattform col-4">
-                    
-                </div>
-                <div class="plattform col-4">
-                    <input type="checkbox" name="platform" id="xbox-360" value="XBOX 360"><label for="xbox-360">XBOX 360</label></br>
-                    <input type="checkbox" name="platform" id="xbox-one" value="XBOX ONE"><label for="xbox-one">XBOX ONE</label></br>
-                    <input type="checkbox" name="platform" id="sps3" value="PS3"><label for="sps3">PS3</label></br>
-                    <input type="checkbox" name="platform" id="sps4" value="PS4"><label for="sps4">PS4</label></br>
-                </div>
-                <div class="plattform col-4">
-                    <input type="checkbox" name="platform" id="windows" value="windows"><label for="windows">Windows</label></br>
-                    <input type="checkbox" name="platform" id="linux" value="linux"><label for="linux">Linux</label></br>
-                    <input type="checkbox" name="platform" id="mac" value="mac"><label for="mac">Mac</label></br>
-                </div>
-                
             </div>
 
             <hr>
