--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% block title %}Pagina principal{% endblock %}
 {% block content %}
-
+<div class="container-fluid">
     <!-- <div class="row-cards-container"> -->
     {% for post in posts %}
-        <div class="card cards">
+        <div class="card cards text-dark">
             <a href="{{url_for('game_review', review_id=post._id)}}">
                 <img class="card-img-top" src="{{url_for('upload', filename=post.post_cover)}}"
                         alt="{{ post.post_title }}">
@@ -35,5 +35,5 @@
             </div>
         </div>
     {% endfor %}
-    <!-- </div> -->
+</div>
 {% endblock %}
