--- a/templates/post.html
+++ b/templates/post.html
@@ -6,7 +6,7 @@
     <fieldset class="fieldset">
         <div class="game-title-section row form-group">                         
             <div class="form-group col-12">
-                <h2 class="post-heading">Review Post</h2>
+                <h2 class="post-heading">New Review</h2>
                 <legend class="post-legend">Game Section</legend>
                 <div class="input-group mb-3">
                     <div class="input-group-prepend">
@@ -140,21 +140,6 @@
                         <label class="custom-file-label" for="gallery-5">Choose file</label>
                     </div>
                 </div>
-                <!-- <label for="gallery-1">Picture 1 </label>
-                <input type="file" class="form-control-file" name="gallery_1" id="gallery-1" >
-                <br>
-                <label for="gallery-2">Picture 2 </label>
-                <input type="file" class="form-control-file" name="gallery_2" id="gallery-2" >
-                <br>
-                <label for="gallery-3">Picture 3</label>
-                <input type="file" class="form-control-file" name="gallery_3" id="gallery-3" >
-                <br>
-                <label for="gallery-4">Picture 4</label>
-                <input type="file" class="form-control-file" name="gallery_4" id="gallery-4" >
-                <br>
-                <label for="gallery-5">Picture 5</label>
-                <input type="file" class="form-control-file" name="gallery_5" id="gallery-5" >
-                <br> -->
             </div>
             <hr>
             
