--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -2,219 +2,162 @@
 {% block title %}Review of {% endblock %}
 {% block content %}
  
-<div class="main">
-    <!-- <div class="col-12 author-container"-->
-        <div class="header">
-            <!-- <div class="">
-                <img class="author-photo" src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Ftse4.mm.bing.net%2Fth%3Fid%3DOIP.t4E3Iky4gK0PNy-NVsFjXAHaHa%26pid%3DApi&f=1" alt="">
-            </div> -->
-            <div class="">
-                <div class="author h3">Posted by: <span>{{ post.posted_by }}</span></div>
-                <div class="posted-date h4">Posted on: {{ post.date_posted.strftime('%d/%b/%Y') }}</div>
+<div class="container-fluid review-container">
+    <div class="game-header">
+        {% if 'username' in session %}
+            <div class="edit-post p-3 mb-2 bg-info">
+                <a href="{{ url_for('edit_post', post_id=post._id) }}" class="edit_post btn btn-warning text-white">
+                    Edit Post
+                </a>
             </div>
-            <div class="social-networks">
-                <i class="fab fa-facebook-f fa-2x"></i>
-                <i class="fab fa-twitter fa-2x"></i>
+        {% endif %}
+        <div class="game-title h3 text-center">
+            <div class="titles align-middle">
+               <span class="title">{{ post.post_title }}</span>
+                <br>
+                <span class="subtitle">{{ post.post_subtitle }}</span>
             </div>
-        </div>    
-    <!-- </div> -->
-
-    {% if 'username' in session %}
-        <div class="col-12">
-            <a href="{{ url_for('edit_post', post_id=post._id) }}" class="edit_post">
-                Edit Post
-            </a>
         </div>
-    {% endif %}
+    </div>
 
-    <div class=" game-header">
-        <div class="game-title-container">
+    <div class="game-title-container">
+        <div class="cover-container">
             <img src="{{ url_for('upload', filename=post.post_cover) }}" alt="" class="game-cover">
+        </div>
 
-            <div class="title-background ">
-                <div class=" title-container" >
-                    <div class="game-title h3">
-                        <span>{{ post.post_title }}:
-                            <br>{{ post.post_subtitle }}
-                        </span>
-                    </div>   
-                </div>
-
-                <div class="">
-                    <div class="game-players ">No. players: <span>{{ post.no_players }}</span>
-                    </div>
-                    <div class="game-release ">Release Date: <span>{{ post.release_date.strftime('%d/%b/%Y') }}</span>
-                    </div>
-                    <div class="square-img">Platforms: 
-                        {% for platform in post.game_platform %}
-                            <span class="platform">{{ platform }} </span>
-                        {% endfor %}
-                    </div>
-                </div>
-
-                <!-- <div class="col-lg-3">
-                </div> -->
-                
-                <div class="points-container">
-                    <div class="progress-circle over50 p{{post.game_score}}" >
-                        <span class="score">{{post.game_score}}</span>
-                        <div class="left-half-clipper">
-                            <div class="first50-bar"></div>
-                            <div class="value-bar"></div>
-                        </div>
-                    </div>
+        <div class="game-info">
+            <div class="game-details">
+                <div class="game-players "><b>No. players:</b> <span>{{ post.no_players }}</span></div>
+                <div class="game-release "><b>Release Date:</b> <span>{{ post.release_date.strftime('%d/%b/%Y') }}</span></div>
+                <div class="square-img"><b>Platforms:</b> 
+                    {% for platform in post.game_platform %}
+                        <span class="platform">{{ platform }} </span>
+                    {% endfor %}
                 </div>
             </div>
-        </div>
-    </div> 
-
-        
-
-    <div class="row gallery">
-        <div class="col-12">
-            {% for pegi in pegi_description %}
-                <div class="square-img {{ pegi }}"></div>
-            {% endfor %}
-        </div>
-        <div class="col-12">
-            {% for pegi in pegi_rate %}
-                <div class="square-img {{pegi}} ">
-                    <!-- <img src=".." alt=""> -->
-                </div>
-                <!-- <div class="square-img pegi7"></div>
-                <div class="square-img pegi12"></div>
-                <div class="square-img pegi16"></div>
-                <div class="square-img pegi18"></div> -->
-            {% endfor %}
-        </div>      
-    </div>
-
-
-    <!-- <article class="container"-->
-    <div class="div">
-        <div class="row">
-            <div class="col-12">
-                <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-                        <ol class="carousel-indicators">
-                            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active">
-                            
-                            </li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="1">
-                            
-                            </li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="2">
-                            
-                            </li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="3">
-                            
-                            </li>
-                            <li data-target="#carouselExampleIndicators" data-slide-to="4">
-                            
-                            </li>
-                        </ol>
-                        <div class="carousel-inner">
-                            <div class="carousel-item active">
-                                <img src="{{ url_for('upload', filename=post.gallery_1) }}" alt="" class="d-block w-100">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="{{ url_for('upload', filename=post.gallery_2) }}" alt="" class=" d-block w-100">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="{{ url_for('upload', filename=post.gallery_3) }}" alt="" class=" d-block w-100">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="{{ url_for('upload', filename=post.gallery_4) }}" alt="" class=" d-block w-100">
-                            </div>
-                            <div class="carousel-item">
-                                <img src="{{ url_for('upload', filename=post.gallery_5) }}" alt="" class=" d-block w-100">
-                            </div>
-                        </div>
-                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Previous</span>
-                        </a>
-                        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                            <span class="sr-only">Next</span>
-                        </a>
-                    </div>
-            </div>
-        </div>
             
-        <!-- <div class="gallery-container">
-            <div class="d-flex justify-content-around">
-                <div class="square-img pegi3">
-                    <img src="{{ url_for('upload', filename=post.gallery_1) }}" alt="" class="square-img">
-                </div>
-                <div class="square-img pegi3">
-                    <img src="{{ url_for('upload', filename=post.gallery_2) }}" alt="" class="square-img">
-                </div>
-                <div class="square-img pegi3">
-                    <img src="{{ url_for('upload', filename=post.gallery_3) }}" alt="" class="square-img">
-                </div>
-                <div class="square-img pegi3">
-                    <img src="{{ url_for('upload', filename=post.gallery_4) }}" alt="" class="square-img">
-                </div>
-                <div class="square-img pegi3">
-                    <img src="{{ url_for('upload', filename=post.gallery_5) }}" alt="" class="square-img">
-                </div>
-            </div>
-        </div> -->
-
-        <div class="pegi-container">
-            <div class="d-flex justify-content-around">
-                <div class="square-img pegi3">
-                    <img src="" alt="" class="square-img pegi3">
-                </div>
-                <div class="square-img pegi3">
-                    <img src="" alt="" class="square-img pegi3">
-                </div>
-                <div class="square-img pegi3">
-                    <img src="" alt="" class="square-img pegi3">
-                </div>
-                <div class="square-img pegi3">
-                    <img src="" alt="" class="square-img pegi3">
-                </div>
-                <div class="square-img pegi3">
-                    <img src="" alt="" class="square-img pegi3">
+            <div class="points-container">
+                <div class="progress-circle over50 p{{post.game_score}}" >
+                    <span class="score">{{post.game_score}}</span>
+                    <div class="left-half-clipper">
+                        <div class="first50-bar"></div>
+                        <div class="value-bar"></div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <!--/article> -->
+ 
 
-        <!--article>
-            <div class=" pegi-container">
-                <div class="row">
-                    <div class="col-2 d-flex justify-content-around">
-                        {% for pegi in post.pegi_desc %}
-                            <div class="square-img pegi-size {{ pegi }}"></div>
-                        {% endfor %}
-                    </div>
-                </div>
+    <div class="gallery">
+        {% for rate in pegi_rate %}
+            <div class="square-img {{ rate }}"></div>
+        {% endfor %}
+
+        {% for pegi in pegi_rate %}
+            <div class="square-img {{pegi}} ">
+                <!-- <img src=".." alt=""> -->
             </div>
-        </article-->
+            <!-- <div class="square-img pegi3"></div>
+            < <div class="square-img pegi7"></div>
+            <div class="square-img pegi12"></div>
+            <div class="square-img pegi16"></div>
+            <div class="square-img pegi18"></div> -->
+        {% endfor %}     
+    </div>
 
-    <div class="row pros-cons-row">
-        <div class="pros-container col-lg-6">
-            <div class="text-center">THE GOOD</div>
-            <div>
+    <div class="gallery">
+        {% for pegi in pegi_description %}
+            <div class="square-img {{ pegi }}"></div>
+        {% endfor %}
+
+        {% for pegi in pegi_rate %}
+            <div class="square-img {{pegi}} ">
+                <!-- <img src=".." alt=""> -->
+            </div>
+            <!-- <div class="square-img pegi3"></div>
+            < <div class="square-img pegi7"></div>
+            <div class="square-img pegi12"></div>
+            <div class="square-img pegi16"></div>
+            <div class="square-img pegi18"></div> -->
+        {% endfor %}     
+    </div>
+
+    <article class="game-review">
+        {{post.post_review|safe}}
+    </article>
+
+
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active">
+            
+            </li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1">
+            
+            </li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2">
+            
+            </li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3">
+            
+            </li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="4">
+            
+            </li>
+        </ol>
+        <div class="carousel-inner">
+            <div class="carousel-item active">
+                <img src="{{ url_for('upload', filename=post.gallery_1) }}" alt="" class="d-block w-100">
+            </div>
+            <div class="carousel-item">
+                <img src="{{ url_for('upload', filename=post.gallery_2) }}" alt="" class=" d-block w-100">
+            </div>
+            <div class="carousel-item">
+                <img src="{{ url_for('upload', filename=post.gallery_3) }}" alt="" class=" d-block w-100">
+            </div>
+            <div class="carousel-item">
+                <img src="{{ url_for('upload', filename=post.gallery_4) }}" alt="" class=" d-block w-100">
+            </div>
+            <div class="carousel-item">
+                <img src="{{ url_for('upload', filename=post.gallery_5) }}" alt="" class=" d-block w-100">
+            </div>
+        </div>
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+        </a>
+    </div>
+
+    <div class="pros-cons-row">
+        <div class="pros-container">
+            <div class="pros">
+                <h3 class="text-center mb-3  mt-3"><u>THE GOOD</u></h3>
                 {{post.pros_content}}
             </div>
         </div>
-        <div class="cons-container col-lg-6">
-            <div class="text-center">THE BAD</div>
-            <div>
+        <div class="cons-container ">  
+            <div class="cons">
+                <h3 class="text-center mb-2 mt-3"><u>THE BAD</u></h3>
                 {{post.cons_content}}
             </div>
         </div>
     </div>
 
-        <article>
-            <div class="container game-review">
-                {{post.post_review}}    
-            </div>
-        </article>
+     <div class="author-container text-light">
+        <div class="author-post h5">
+            <div class="author">Posted by: <span>{{ post.posted_by }}</span></div>
+            <div class="posted-date ">Posted on: {{ post.date_posted.strftime('%d/%b/%Y') }}</div>
+        </div>
+        <div class=" social-networks">
+            <i class="fab fa-facebook-f fa-2x"></i>
+            <i class="fab fa-twitter fa-2x"></i>
+        </div>
+    </div>    
 
 </div>      
 
