Styling Edit_Post html file

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -350,7 +350,7 @@ footer{
 /*****************************************/
 /** Form **/
 /*****************************************/
-.plattform,
+.platforms,
 .description-container{
     padding-left: 35px;
 }
