--- a/templates/login.html
+++ b/templates/login.html
@@ -12,16 +12,14 @@
 
     <div class="spacer col-12"></div>
 
-    <form class="form form-login form-group" method="POST" action="{{url_for('login')}}">
-        <div class="login-container">
+    <form class="form form-login form-group login-container" method="POST" action="{{url_for('login')}}">
             <legend class="login">Login</legend>
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
-                    <label for="username" class="input-group-text" id="basic-addon1">@</label>
+                    <label for="username" class="input-group-text" id="basic-addon1">username@</label>
                     
                 </div>
                 <input type="text" name="username" id="username" placeholder="Username" class="form-control"/>
-                <!-- <input type="text" class="form-control" placeholder="Username" aria-label="Username" aria-describedby="basic-addon1"> -->
             </div>
 
             
@@ -40,8 +38,6 @@
             <div class="submit-container">
                 <button type="submit" class="submit submit-login btn btn-success">Lets go!</button>
             </div>
-        </div>
-        
     </form>
     <div class="spacer col-12"></div>
 {% endblock %}
