--- a/templates/edit_post.html
+++ b/templates/edit_post.html
@@ -4,11 +4,11 @@
 
 <form class="form form-post" method="POST" action="{{url_for('update_post', post_id=post._id)}}" enctype="multipart/form-data">
     <div class="row">
-    <h2 class="post-heading">Edit Post</h2>
+        <h2 class="post-heading">Edit Post</h2>
         <fieldset class="fieldset">
         
             <div class="game-title-section row">
-            <legend class="post-legend">Game Section</legend>
+                <legend class="post-legend">Game Section</legend>
                 <div class="col-12">
                     <label for="post-title">Game Title</label>
                     <input type="text" name="post-title" id="post-title" value="{{ post.post_title }}">
@@ -39,11 +39,11 @@
                 <div class="platforms form-group">
                     {% for platform in platforms %}
                         {% if platform in post.game_platform %}
-                            <input type="checkbox" class="form-check-input" name="platform" value="{{platform}}" checked>
+                            <input type="checkbox" class="form-check-input" name="platforms" value="{{platform}}" checked>
                         {% else %}
-                            <input type="checkbox" class="form-check-input" name="platform" value="{{platform}}" >
+                            <input type="checkbox" class="form-check-input" name="platforms" value="{{platform}}" >
                         {% endif %}
-                            <label for="nwii">{{platform}}</label>
+                            <label for="platform">{{platform}}</label>
                         </br>
                     {% endfor %}
                 </div>
@@ -55,35 +55,41 @@
                 <legend>Pegi Description</legend>
                 <div class="description-container form-group">
                     {% for pegi in pegi_description %}
-                        <input type="checkbox" class="form-check-input" name="pegi_description" value="{{pegi}}" id="{{pegi}}"><label class="" for="{{pegi}}">{{pegi_description[pegi]}}</label></br>
+                        {% if pegi in post.pegi_desc %}
+                            <input type="checkbox" class="form-check-input" name="pegi_description" value="{{pegi}}" id="{{pegi}}" checked>
+                        {% else %}
+                            <input type="checkbox" class="form-check-input" name="pegi_description" value="{{pegi}}" id="{{pegi}}">
+                        {% endif %}
+                        <label class="" for="{{pegi}}">{{pegi_description[pegi]}}</label></br>
                     {% endfor %}
                 </div>
             </div>
 
             <hr>
-
-            <legend class="post-legend">Load 5 pictures for the post</legend>
-            <p>Select five pictres for the review's gallery</p>
+            
             <div class="col-12">
-                <label for="gallery-1">Picture 1 </label>
-                <input type="file" name="gallery_1" id="gallery-1" >
+                <legend class="post-legend">Gallery Section</legend>
+                <p>Select five pictres for the review's gallery</p>
+                <label class="gallery-label" for="gallery-1">Picture 1: <u>{{ post.gallery_1 }}</u> </label>
+                <input type="file" name="gallery_1" id="gallery-1" value="{{ post.gallery_1 }}">
                 <br>
-                <label for="gallery-2">Picture 2 </label>
+                <label class="gallery-label" for="gallery-2">Picture 2: <u>{{ post.gallery_2 }}</u> </label>
                 <input type="file" name="gallery_2" id="gallery-2" >
                 <br>
-                <label for="gallery-3">Picture 3</label>
+                <label class="gallery-label" for="gallery-3">Picture 3: <u>{{ post.gallery_3 }}</u></label>
                 <input type="file" name="gallery_3" id="gallery-3" >
                 <br>
-                <label for="gallery-4">Picture 4</label>
+                <label class="gallery-label" for="gallery-4">Picture 4: <u>{{ post.gallery_4 }}</u></label>
                 <input type="file" name="gallery_4" id="gallery-4" >
                 <br>
-                <label for="gallery-5">Picture 5</label>
-                <input type="file" name="gallery_5" id="gallery-5" value="{ post.gallery_5 }">
+                <label class="gallery-label" for="gallery-5">Picture 5: <u>{{ post.gallery_5 }}</u></label>
+                <input type="file" name="gallery_5" id="gallery-5" value="{{ post.gallery_5 }}" placeholder="{{ post.gallery_5 }}">
                 <br>
             </div>
             <hr>
-            <legend>Review Section</legend>
+            
             <div class="col-12">
+                <legend>Review Section</legend>
                 <label for="pros" class="post-pros">Pros</label>
                 <textarea name="post-pros" id="pros" class="pros">{{ post.pros_content }}</textarea>
                 <label for="cons" class="post-cons">Cons</label>
@@ -94,7 +100,7 @@
 
             
         </fieldset>
-
+        
         <div class="col-12">
             <input type="submit" value="Update" class="submit btn btn-success">
         </div>
