--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -9,7 +9,7 @@
                 <a href="{{ url_for('edit_post', post_id=post._id) }}" class="edit-post btn btn-warning text-white">
                     Edit Post
                 </a>
-                <a href="" class="delele-post btn btn-danger text-white">
+                <a href="{{ url_for('delete_post', post_id=post._id) }}" class="delele-btn btn btn-danger text-white">
                     Delete Post
                 </a>
             </div>
@@ -34,17 +34,19 @@
                 <div class="game-players">No. players: <span>{{ post.no_players }}</span></div>
                 <div class="game-release ">Release Date: <span>{{ post.release_date.strftime('%d/%b/%Y') }}</span></div>
                 <div class="game-platform">Platforms:
-                    {% for platform in post.game_platform %}
-                        <span class="platform">{{ platform }} </span>
-                    {% endfor %}
+                    <ul>
+                        {% for platform in post.game_platform %}
+                            <li class="platform">{{ platform }} </li>
+                        {% endfor %}
+                    </ul>
                 </div>
             </div>
             
-            <div class="pegi-description">
-                {% for pegi in post.pegi_desc %}
-                    <div class="square-img {{pegi}}"></div>
-                {% endfor %}
-            </div>
+            {% for pegi in post.pegi_desc %}
+                <div class="pegi-description {{pegi}}"></div>
+            {% endfor %}
+            
+            <div class="pegi-rate {{post.pegi_rate}}"></div>
 
             <div class="points-container">
                 <div class="progress-circle over50 p{{post.game_score}}" >
