--- a/templates/post.html
+++ b/templates/post.html
@@ -110,7 +110,7 @@
             <div class="form-group  col-lg-12">
             <legend class="post-legend">Load 5 pictures for the post</legend>
             <p>Select five pictres for the review's gallery</p>
-                <div class="input-group mb-3 col-lg-6">
+                <div class="input-group mb-3 col-lg-12">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroupFileAddon01">Picture 1 </span>
                     </div>
@@ -119,7 +119,7 @@
                         <label class="custom-file-label" for="gallery-1">Choose file</label>
                     </div>
                 </div>
-                <div class="input-group mb-3 col-lg-6">
+                <div class="input-group mb-3 col-lg-12">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroupFileAddon01">Picture 2 </span>
                     </div>
@@ -128,7 +128,7 @@
                         <label class="custom-file-label" for="gallery-2">Choose file</label>
                     </div>
                 </div>
-                <div class="input-group mb-3 col-lg-6">
+                <div class="input-group mb-3 col-lg-12">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroupFileAddon01">Picture 3 </span>
                     </div>
@@ -137,7 +137,7 @@
                         <label class="custom-file-label" for="gallery-3">Choose file</label>
                     </div>
                 </div>
-                <div class="input-group mb-3 col-lg-6">
+                <div class="input-group mb-3 col-lg-12">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroupFileAddon01">Picture 4 </span>
                     </div>
@@ -146,7 +146,7 @@
                         <label class="custom-file-label" for="gallery-4">Choose file</label>
                     </div>
                 </div>
-                <div class="input-group mb-3 col-lg-6">
+                <div class="input-group mb-3 col-lg-12">
                     <div class="input-group-prepend">
                         <span class="input-group-text" id="inputGroupFileAddon01">Picture 5 </span>
                     </div>
@@ -160,6 +160,9 @@
             
             <div class="col-12 form-group">
                 <legend>Review Section</legend>
+                <p>
+                    Html friendly: Give a go to your Html skills to add your owen spice to your post.
+                </p>
                 <div class="row">
                     <div class="col-lg-6 mb-3">
                         <label for="pros" class="post-pros input-group-text">Pros</label>
@@ -179,7 +182,7 @@
             </div>
 
             <div class="col-12 form-group">
-                <input type="submit" value="Submit" class=" form-control submit btn btn-success">
+                <input type="submit" value="Submit" class="form-control submit btn btn-success">
             </div>
         </div>  
     </fieldset>
