--- a/templates/reviews.html
+++ b/templates/reviews.html
@@ -33,12 +33,10 @@
             <div class="game-details">
                 <div class="game-players">No. players: <span>{{ post.no_players }}</span></div>
                 <div class="game-release ">Release Date: <span>{{ post.release_date.strftime('%d/%b/%Y') }}</span></div>
-                <div class="game-platform">Platforms:
-                    <ul>
-                        {% for platform in post.game_platform %}
-                            <li class="platform">{{ platform }} </li>
-                        {% endfor %}
-                    </ul>
+                <div class="game-platform">Platforms:<br>
+                    {% for platform in post.game_platform %}
+                        <span class="platform">{{ platform }} </span>
+                    {% endfor %}
                 </div>
             </div>
             
@@ -68,13 +66,7 @@
 
         {% for pegi in pegi_rate %}
             <div class="square-img {{pegi}} ">
-                <!-- <img src=".." alt=""> -->
             </div>
-            <!-- <div class="square-img pegi3"></div>
-            < <div class="square-img pegi7"></div>
-            <div class="square-img pegi12"></div>
-            <div class="square-img pegi16"></div>
-            <div class="square-img pegi18"></div> -->
         {% endfor %}     
     </div>
 
@@ -85,13 +77,7 @@
 
         {% for pegi in pegi_rate %}
             <div class="square-img {{pegi}} ">
-                <!-- <img src=".." alt=""> -->
             </div>
-            <!-- <div class="square-img pegi3"></div>
-            < <div class="square-img pegi7"></div>
-            <div class="square-img pegi12"></div>
-            <div class="square-img pegi16"></div>
-            <div class="square-img pegi18"></div> -->
         {% endfor %}     
     </div>
 
@@ -149,13 +135,13 @@
         <div class="pros-container">
             <div class="pros">
                 <h3 class="text-center mb-3  mt-3"><u>THE GOOD</u></h3>
-                {{post.pros_content}}
+                {{post.pros_content|safe}}
             </div>
         </div>
         <div class="cons-container ">  
             <div class="cons">
                 <h3 class="text-center mb-2 mt-3"><u>THE BAD</u></h3>
-                {{post.cons_content}}
+                {{post.cons_content|safe}}
             </div>
         </div>
     </div>
